[package]
name = "network-quality-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow             = "1.0.100"
axum               = "0.8.8"
prometheus         = { version = "0.14.0", default-features = false }
serde              = { version = "1.0.228", features = ["derive"] }
tokio              = { version = "1.48.0", features = ["rt-multi-thread", "net", "fs", "process", "io-util", "time"] }
toml               = "0.9.10"
tracing            = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
